# personal-alpaca-cli

./: Cargo.toml  LICENSE  README.md  deploy.sh  install.sh
src/: alpaca_api.rs  cli.rs  credentials.rs  error.rs  main.rs  tui.rs  websocket.rs
src/cli/: cmd.rs  matches.rs  mod.rs  utils.rs
