[package]
name = "stock-trader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.23", features = ["cargo"] }
dirs = "5.0.1"
futures = "0.3"  # For join_all - concurrent futures
rand = "0.8.5"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
thiserror = "2.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
